--- a/java/build.gradle
+++ b/java/build.gradle
@@ -18,12 +18,12 @@ compileJava {
 sourceSets {
     main {
         java {
-            srcDirs 'src'
+            srcDirs 'src/main/java/'
         }
     }
     test {
         java {
-            srcDirs 'src'
+            srcDirs 'src/test/java/'
         }
     }
 }
