add(typst): now has both sioyek and skim

--- a/typst/makefile
+++ b/typst/makefile
@@ -1,5 +1,10 @@
 compile:
 	typst compile main.typ
-watch: compile
+
+sioyek: compile
+	sioyek main.pdf &
+	typst watch main.typ
+
+skim: compile
 	open -a /Applications/Skim.app main.pdf
 	typst watch main.typ
