--- a/haskell/simple.cabal
+++ b/haskell/simple.cabal
@@ -1,58 +1,35 @@
-cabal-version:      2.2
-name:               simple
-version:            0.1.0.0
+cabal-version: 2.2
+name:          simple
+version:       0.1.0.0
+author:        Léana 江
+maintainer:    leana.jiang@icloud.com
 
-author:             Léana 江
-maintainer:         leana.jiang@icloud.com
+common common
+  default-language: Haskell2010
+  ghc-options:
+    -Wall -Wcompat -Widentities -Wincomplete-record-updates
+    -Wincomplete-patterns -Wincomplete-uni-patterns
+    -Wredundant-constraints -Werror=missing-fields
 
 library
-  default-language: Haskell2010
   hs-source-dirs:   src
-  build-depends:
-    , base          >= 4.7 && <5
-  ghc-options:      -Wall
-                    -Wcompat
-                    -Widentities
-                    -Wincomplete-record-updates
-                    -Wincomplete-patterns
-                    -Wincomplete-uni-patterns
-                    -Wredundant-constraints
-                    -Werror=missing-fields
+  build-depends:    base >=4.7 && <5
   exposed-modules:
 
 executable simple-bin
-  default-language: Haskell2010
   hs-source-dirs:   src
   main-is:          Main.hs
   build-depends:
-    , base          >= 4.7 && <5
+    , base    >=4.7 && <5
     , simple
-  ghc-options:      -Wall
-                    -Wcompat
-                    -Widentities
-                    -Wincomplete-record-updates
-                    -Wincomplete-patterns
-                    -Wincomplete-uni-patterns
-                    -Wredundant-constraints
-                    -Werror=missing-fields
 
 test-suite simple-spec
   type:             exitcode-stdio-1.0
   main-is:          Spec.hs
   hs-source-dirs:   test
-  default-language: Haskell2010
   other-modules:
   build-depends:
-    , base          >= 4.7 && <5
-    , hspec         >= 2.10
-    , QuickCheck    >= 2.14
+    , base        >=4.7  && <5
+    , hspec       >=2.10
+    , QuickCheck  >=2.14
     , simple
-  ghc-options:      -Wall
-                    -Wcompat
-                    -Widentities
-                    -Wincomplete-record-updates
-                    -Wincomplete-patterns
-                    -Wincomplete-uni-patterns
-                    -Wredundant-constraints
-                    -Werror=missing-fields
-
