--- a/haskell/simple.cabal
+++ b/haskell/simple.cabal
@@ -5,31 +5,39 @@ author:        Léana 江
 maintainer:    leana.jiang@icloud.com
 
 common common
-  default-language: Haskell2010
+  default-language:   Haskell2010
+  default-extensions:
+    NamedFieldPuns
+    OverloadedStrings
+    BlockArguments
+
   ghc-options:
     -Wall -Wcompat -Widentities -Wincomplete-record-updates
     -Wincomplete-patterns -Wincomplete-uni-patterns
     -Wredundant-constraints -Werror=missing-fields
 
+  build-depends:
+    , base        >=4.7      && <5
+
 library
-  hs-source-dirs:   src
-  build-depends:    base >=4.7 && <5
+  import:          common
+  hs-source-dirs:  src
   exposed-modules:
 
 executable simple-bin
-  hs-source-dirs:   src
-  main-is:          Main.hs
-  build-depends:
-    , base    >=4.7 && <5
-    , simple
+  import:         common
+  hs-source-dirs: src
+  main-is:        Main.hs
+  build-depends:  simple
+  other-modules:
 
 test-suite simple-spec
-  type:             exitcode-stdio-1.0
-  main-is:          Spec.hs
-  hs-source-dirs:   test
-  other-modules:
+  import:         common
+  type:           exitcode-stdio-1.0
+  main-is:        Spec.hs
+  hs-source-dirs: test
   build-depends:
-    , base        >=4.7  && <5
-    , hspec       >=2.10
-    , QuickCheck  >=2.14
+    , hspec             ^>=2.10
+    , hspec-megaparsec  ^>=2.2.0
+    , QuickCheck        ^>=2.14
     , simple
