--- a/haskell/simple.cabal
+++ b/haskell/simple.cabal
@@ -7,9 +7,7 @@ maintainer:    leana.jiang@icloud.com
 common common
   default-language:   Haskell2010
   default-extensions:
-    NamedFieldPuns
-    OverloadedStrings
-    BlockArguments
+    TupleSections
 
   ghc-options:
     -Wall -Wcompat -Widentities -Wincomplete-record-updates
