--- a/typst/.github/workflows/build-pdf.yml
+++ b/typst/.github/workflows/build-pdf.yml
@@ -11,17 +11,37 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Download fonts
+        run: |
+          wget -q -O lmodern.zip "https://www.gust.org.pl/projects/e-foundry/latin-modern/download/lm2.004otf.zip"
+          unzip -q -d fonts/ lmodern.zip
+
+          wget -q -O iosevka.zip "https://github.com/be5invis/Iosevka/releases/download/v28.1.0/PkgTTC-Iosevka-28.1.0.zip"
+          unzip -q -d fonts/ iosevka.zip
+
       - name: Typst
-        uses: lvignoli/typst-action@main
+        # uses: lvignoli/typst-action@main
+        # waiting for PR to be merged
+        uses: leana8959/typst-action@main
         with:
+          options: |
+            --font-path
+            fonts
           source_file: |
             main.typ
 
-      - name: Upload PDF file
-        uses: actions/upload-artifact@v3
-        with:
-          name: compiled_PDF
-          path: "*.pdf"
+      # # Enable only when you need to print it
+      # - name: Fix printer issues
+      #   run: |
+      #     apt-get update -y
+      #     apt-get install ghostscript -y
+      #     for f in *.pdf; do
+      #       gs \
+      #           -o "printable_$f" \
+      #           -sDEVICE=pdfwrite \
+      #           -dPDFSETTINGS=/prepress \
+      #           "$f"
+      #     done
 
       - name: Get current date
         id: date
